// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationCounts renders  component with a mock record metrics 1`] = `
<div
  className="citationCounts columns is-multiline is-gapless"
>
  <span
    className="citationCount"
  >
    <img
      alt="Altmetric score is 49"
      className="citationCountIcon"
      src=""
      title="Altmetric score is 49"
    />
    <span
      className="citationCountNumber"
    >
      49
    </span>
  </span>
  <span
    className="citationCount"
  >
    <a
      className="citationCountLink"
      href="https://scholar.google.com/scholar?q=intitle:\\"TRPC1%20is%20a%20differential%20regulator%20of%20hypoxia-mediated%20events%20and%20Akt%20signalling%20in%20PTEN-deficient%20breast%20cancer%20cells\\""
      target="_blank"
    >
      <img
        alt="Citation counts in Google Scholar"
        className="citationCountIcon"
        src=""
        title="Citation counts in Google Scholar"
      />
    </a>
  </span>
  <span
    className="citationCount"
  >
    <img
      alt="Open Access - DOI - Free to read (embargo date might apply)"
      className="citationCountIcon"
      src=""
      title="Open Access - DOI - Free to read (embargo date might apply)"
    />
  </span>
</div>
`;

exports[`CitationCounts renders  component with all metrics 1`] = `
<div
  className="citationCounts columns is-multiline is-gapless"
>
  <span
    className="citationCount"
  >
    <img
      alt="Web of Science citation count is 1"
      className="citationCountIcon"
      src=""
      title="Web of Science citation count is 1"
    />
    <span
      className="citationCountNumber"
    >
      1
    </span>
  </span>
  <span
    className="citationCount"
  >
    <img
      alt="Scopus citation count is 1"
      className="citationCountIcon"
      src=""
      title="Scopus citation count is 1"
    />
    <span
      className="citationCountNumber"
    >
      1
    </span>
  </span>
  <span
    className="citationCount"
  >
    <img
      alt="Altmetric score is 1"
      className="citationCountIcon"
      src=""
      title="Altmetric score is 1"
    />
    <span
      className="citationCountNumber"
    >
      1
    </span>
  </span>
  <span
    className="citationCount"
  >
    <a
      className="citationCountLink"
      href="https://scholar.google.com/scholar?q=intitle:\\"undefined\\""
      target="_blank"
    >
      <img
        alt="Citation counts in Google Scholar"
        className="citationCountIcon"
        src=""
        title="Citation counts in Google Scholar"
      />
      1
    </a>
  </span>
  <span
    className="citationCount"
  >
    <img
      alt="Open Access - DOI - Free to read (embargo date might apply)"
      className="citationCountIcon"
      src=""
      title="Open Access - DOI - Free to read (embargo date might apply)"
    />
  </span>
  <div
    className="citationCount column"
  >
    <a
      className="citationCountLink"
      href="https://app.library.uq.edu.au/#/authors/view/pid:111"
      target="_blank"
    >
      <div
        className="columns is-mobile is-gapless"
      >
        <div
          className="column is-narrow"
        >
          <FontIcon
            className="citationCountIcon material-icons"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            open_in_new
          </FontIcon>
        </div>
        <div
          className="column is-narrow citationCountNumber"
        >
          View full statistics
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`CitationCounts renders  component with no metrics 1`] = `
<div
  className="citationCounts columns is-multiline is-gapless"
/>
`;

exports[`CitationCounts renders  component with non rendering oa status 1`] = `
<div
  className="citationCounts columns is-multiline is-gapless"
>
  <span
    className="citationCount"
  >
    <img
      alt="Web of Science citation count is 1"
      className="citationCountIcon"
      src=""
      title="Web of Science citation count is 1"
    />
    <span
      className="citationCountNumber"
    >
      1
    </span>
  </span>
  <span
    className="citationCount"
  >
    <img
      alt="Scopus citation count is 1"
      className="citationCountIcon"
      src=""
      title="Scopus citation count is 1"
    />
    <span
      className="citationCountNumber"
    >
      1
    </span>
  </span>
  <span
    className="citationCount"
  >
    <img
      alt="Altmetric score is 1"
      className="citationCountIcon"
      src=""
      title="Altmetric score is 1"
    />
    <span
      className="citationCountNumber"
    >
      1
    </span>
  </span>
  <span
    className="citationCount"
  >
    <a
      className="citationCountLink"
      href="https://scholar.google.com/scholar?q=intitle:\\"undefined\\""
      target="_blank"
    >
      <img
        alt="Citation counts in Google Scholar"
        className="citationCountIcon"
        src=""
        title="Citation counts in Google Scholar"
      />
      1
    </a>
  </span>
  <div
    className="citationCount column"
  >
    <a
      className="citationCountLink"
      href="https://app.library.uq.edu.au/#/authors/view/pid:111"
      target="_blank"
    >
      <div
        className="columns is-mobile is-gapless"
      >
        <div
          className="column is-narrow"
        >
          <FontIcon
            className="citationCountIcon material-icons"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            open_in_new
          </FontIcon>
        </div>
        <div
          className="column is-narrow citationCountNumber"
        >
          View full statistics
        </div>
      </div>
    </a>
  </div>
</div>
`;
